proofs/_archive/bastion_runs/2026-02-07_075141/cli/14_nsg_list.json
[
  {
    "defaultSecurityRules": [
      {
        "access": "Allow",
        "description": "Allow inbound traffic from all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"b4fa9656-5384-4815-99d1-5ab53ae7b2f1\"",
        "id": "/subscriptions/a51a94c7-ee9c-48b6-8880-e0c4c1452650/resourceGroups/rg-networking-tf/providers/Microsoft.Network/networkSecurityGroups/nsg-backend/defaultSecurityRules/AllowVnetInBound",
        "name": "AllowVnetInBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-networking-tf",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow inbound traffic from azure load balancer",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"b4fa9656-5384-4815-99d1-5ab53ae7b2f1\"",
        "id": "/subscriptions/a51a94c7-ee9c-48b6-8880-e0c4c1452650/resourceGroups/rg-networking-tf/providers/Microsoft.Network/networkSecurityGroups/nsg-backend/defaultSecurityRules/AllowAzureLoadBalancerInBound",
        "name": "AllowAzureLoadBalancerInBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-networking-tf",
        "sourceAddressPrefix": "AzureLoadBalancer",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all inbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"b4fa9656-5384-4815-99d1-5ab53ae7b2f1\"",
        "id": "/subscriptions/a51a94c7-ee9c-48b6-8880-e0c4c1452650/resourceGroups/rg-networking-tf/providers/Microsoft.Network/networkSecurityGroups/nsg-backend/defaultSecurityRules/DenyAllInBound",
        "name": "DenyAllInBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-networking-tf",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"b4fa9656-5384-4815-99d1-5ab53ae7b2f1\"",
        "id": "/subscriptions/a51a94c7-ee9c-48b6-8880-e0c4c1452650/resourceGroups/rg-networking-tf/providers/Microsoft.Network/networkSecurityGroups/nsg-backend/defaultSecurityRules/AllowVnetOutBound",
        "name": "AllowVnetOutBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-networking-tf",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to Internet",
        "destinationAddressPrefix": "Internet",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"b4fa9656-5384-4815-99d1-5ab53ae7b2f1\"",
        "id": "/subscriptions/a51a94c7-ee9c-48b6-8880-e0c4c1452650/resourceGroups/rg-networking-tf/providers/Microsoft.Network/networkSecurityGroups/nsg-backend/defaultSecurityRules/AllowInternetOutBound",
        "name": "AllowInternetOutBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-networking-tf",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all outbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"b4fa9656-5384-4815-99d1-5ab53ae7b2f1\"",
        "id": "/subscriptions/a51a94c7-ee9c-48b6-8880-e0c4c1452650/resourceGroups/rg-networking-tf/providers/Microsoft.Network/networkSecurityGroups/nsg-backend/defaultSecurityRules/DenyAllOutBound",
        "name": "DenyAllOutBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-networking-tf",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      }
    ],
    "etag": "W/\"b4fa9656-5384-4815-99d1-5ab53ae7b2f1\"",
    "id": "/subscriptions/a51a94c7-ee9c-48b6-8880-e0c4c1452650/resourceGroups/rg-networking-tf/providers/Microsoft.Network/networkSecurityGroups/nsg-backend",
    "location": "westeurope",
    "name": "nsg-backend",
    "provisioningState": "Succeeded",
    "resourceGroup": "rg-networking-tf",
    "resourceGuid": "d4e99bd8-f385-45a9-a12a-704176fb270f",
    "securityRules": [
      {
        "access": "Allow",
        "destinationAddressPrefix": "",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": [
          {
            "id": "/subscriptions/a51a94c7-ee9c-48b6-8880-e0c4c1452650/resourceGroups/RG-NETWORKING-TF/providers/Microsoft.Network/applicationSecurityGroups/ASG-DB",
            "resourceGroup": "RG-NETWORKING-TF"
          }
        ],
        "destinationPortRange": "8080",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"b4fa9656-5384-4815-99d1-5ab53ae7b2f1\"",
        "id": "/subscriptions/a51a94c7-ee9c-48b6-8880-e0c4c1452650/resourceGroups/rg-networking-tf/providers/Microsoft.Network/networkSecurityGroups/nsg-backend/securityRules/allow-app-web-to-db",
        "name": "allow-app-web-to-db",
        "priority": 110,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-networking-tf",
        "sourceAddressPrefix": "",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": [
          {
            "id": "/subscriptions/a51a94c7-ee9c-48b6-8880-e0c4c1452650/resourceGroups/RG-NETWORKING-TF/providers/Microsoft.Network/applicationSecurityGroups/ASG-WEB",
            "resourceGroup": "RG-NETWORKING-TF"
          }
        ],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Deny",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "22",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"b4fa9656-5384-4815-99d1-5ab53ae7b2f1\"",
        "id": "/subscriptions/a51a94c7-ee9c-48b6-8880-e0c4c1452650/resourceGroups/rg-networking-tf/providers/Microsoft.Network/networkSecurityGroups/nsg-backend/securityRules/deny-ssh-inbound",
        "name": "deny-ssh-inbound",
        "priority": 200,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-networking-tf",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Deny",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "3389",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"b4fa9656-5384-4815-99d1-5ab53ae7b2f1\"",
        "id": "/subscriptions/a51a94c7-ee9c-48b6-8880-e0c4c1452650/resourceGroups/rg-networking-tf/providers/Microsoft.Network/networkSecurityGroups/nsg-backend/securityRules/deny-rdp-inbound",
        "name": "deny-rdp-inbound",
        "priority": 210,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-networking-tf",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": [
          {
            "id": "/subscriptions/a51a94c7-ee9c-48b6-8880-e0c4c1452650/resourceGroups/RG-NETWORKING-TF/providers/Microsoft.Network/applicationSecurityGroups/ASG-DB",
            "resourceGroup": "RG-NETWORKING-TF"
          }
        ],
        "destinationPortRange": "22",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"b4fa9656-5384-4815-99d1-5ab53ae7b2f1\"",
        "id": "/subscriptions/a51a94c7-ee9c-48b6-8880-e0c4c1452650/resourceGroups/rg-networking-tf/providers/Microsoft.Network/networkSecurityGroups/nsg-backend/securityRules/allow-ssh-to-backend-from-bastion",
        "name": "allow-ssh-to-backend-from-bastion",
        "priority": 100,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-networking-tf",
        "sourceAddressPrefix": "10.0.10.0/26",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      }
    ],
    "subnets": [
      {
        "id": "/subscriptions/a51a94c7-ee9c-48b6-8880-e0c4c1452650/resourceGroups/RG-NETWORKING-TF/providers/Microsoft.Network/virtualNetworks/VNET-MAIN/subnets/SUBNET-BACKEND",
        "resourceGroup": "RG-NETWORKING-TF"
      }
    ],
    "tags": {},
    "type": "Microsoft.Network/networkSecurityGroups"
  },
  {
    "defaultSecurityRules": [
      {
        "access": "Allow",
        "description": "Allow inbound traffic from all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"c5662cea-0cbb-424f-b02c-9a962256dd87\"",
        "id": "/subscriptions/a51a94c7-ee9c-48b6-8880-e0c4c1452650/resourceGroups/rg-networking-tf/providers/Microsoft.Network/networkSecurityGroups/nsg-frontend/defaultSecurityRules/AllowVnetInBound",
        "name": "AllowVnetInBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-networking-tf",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow inbound traffic from azure load balancer",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"c5662cea-0cbb-424f-b02c-9a962256dd87\"",
        "id": "/subscriptions/a51a94c7-ee9c-48b6-8880-e0c4c1452650/resourceGroups/rg-networking-tf/providers/Microsoft.Network/networkSecurityGroups/nsg-frontend/defaultSecurityRules/AllowAzureLoadBalancerInBound",
        "name": "AllowAzureLoadBalancerInBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-networking-tf",
        "sourceAddressPrefix": "AzureLoadBalancer",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all inbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"c5662cea-0cbb-424f-b02c-9a962256dd87\"",
        "id": "/subscriptions/a51a94c7-ee9c-48b6-8880-e0c4c1452650/resourceGroups/rg-networking-tf/providers/Microsoft.Network/networkSecurityGroups/nsg-frontend/defaultSecurityRules/DenyAllInBound",
        "name": "DenyAllInBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-networking-tf",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"c5662cea-0cbb-424f-b02c-9a962256dd87\"",
        "id": "/subscriptions/a51a94c7-ee9c-48b6-8880-e0c4c1452650/resourceGroups/rg-networking-tf/providers/Microsoft.Network/networkSecurityGroups/nsg-frontend/defaultSecurityRules/AllowVnetOutBound",
        "name": "AllowVnetOutBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-networking-tf",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to Internet",
        "destinationAddressPrefix": "Internet",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"c5662cea-0cbb-424f-b02c-9a962256dd87\"",
        "id": "/subscriptions/a51a94c7-ee9c-48b6-8880-e0c4c1452650/resourceGroups/rg-networking-tf/providers/Microsoft.Network/networkSecurityGroups/nsg-frontend/defaultSecurityRules/AllowInternetOutBound",
        "name": "AllowInternetOutBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-networking-tf",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all outbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"c5662cea-0cbb-424f-b02c-9a962256dd87\"",
        "id": "/subscriptions/a51a94c7-ee9c-48b6-8880-e0c4c1452650/resourceGroups/rg-networking-tf/providers/Microsoft.Network/networkSecurityGroups/nsg-frontend/defaultSecurityRules/DenyAllOutBound",
        "name": "DenyAllOutBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-networking-tf",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      }
    ],
    "etag": "W/\"c5662cea-0cbb-424f-b02c-9a962256dd87\"",
    "id": "/subscriptions/a51a94c7-ee9c-48b6-8880-e0c4c1452650/resourceGroups/rg-networking-tf/providers/Microsoft.Network/networkSecurityGroups/nsg-frontend",
    "location": "westeurope",
    "name": "nsg-frontend",
    "networkInterfaces": [
      {
        "id": "/subscriptions/a51a94c7-ee9c-48b6-8880-e0c4c1452650/resourceGroups/RG-NETWORKING-TF/providers/Microsoft.Network/networkInterfaces/NIC-FRONTEND",
        "resourceGroup": "RG-NETWORKING-TF"
      }
    ],
    "provisioningState": "Succeeded",
    "resourceGroup": "rg-networking-tf",
    "resourceGuid": "88618d55-72a2-492b-8ebe-21778bbeb83d",
    "securityRules": [
      {
        "access": "Deny",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "3389",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"c5662cea-0cbb-424f-b02c-9a962256dd87\"",
        "id": "/subscriptions/a51a94c7-ee9c-48b6-8880-e0c4c1452650/resourceGroups/rg-networking-tf/providers/Microsoft.Network/networkSecurityGroups/nsg-frontend/securityRules/deny-rdp-inbound",
        "name": "deny-rdp-inbound",
        "priority": 210,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-networking-tf",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Deny",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "22",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"c5662cea-0cbb-424f-b02c-9a962256dd87\"",
        "id": "/subscriptions/a51a94c7-ee9c-48b6-8880-e0c4c1452650/resourceGroups/rg-networking-tf/providers/Microsoft.Network/networkSecurityGroups/nsg-frontend/securityRules/deny-ssh-inbound",
        "name": "deny-ssh-inbound",
        "priority": 200,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-networking-tf",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "22",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"c5662cea-0cbb-424f-b02c-9a962256dd87\"",
        "id": "/subscriptions/a51a94c7-ee9c-48b6-8880-e0c4c1452650/resourceGroups/rg-networking-tf/providers/Microsoft.Network/networkSecurityGroups/nsg-frontend/securityRules/allow-ssh-from-bastion",
        "name": "allow-ssh-from-bastion",
        "priority": 100,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-networking-tf",
        "sourceAddressPrefix": "10.0.10.0/26",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "3389",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"c5662cea-0cbb-424f-b02c-9a962256dd87\"",
        "id": "/subscriptions/a51a94c7-ee9c-48b6-8880-e0c4c1452650/resourceGroups/rg-networking-tf/providers/Microsoft.Network/networkSecurityGroups/nsg-frontend/securityRules/allow-rdp-from-bastion",
        "name": "allow-rdp-from-bastion",
        "priority": 110,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-networking-tf",
        "sourceAddressPrefix": "10.0.10.0/26",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      }
    ],
    "tags": {},
    "type": "Microsoft.Network/networkSecurityGroups"
  }
]
